--- a/brend_doo/package.json
+++ b/brend_doo/package.json
@@ -14,6 +14,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.28.0",
+    "react-router-hash-link": "^2.4.3",
     "swiper": "^11.1.14",
     "yup": "^1.4.0"
   },
@@ -21,6 +22,7 @@
     "@eslint/js": "^9.13.0",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
+    "@types/react-router-hash-link": "^2.4.9",
     "@vitejs/plugin-react-swc": "^3.5.0",
     "autoprefixer": "^10.4.20",
     "eslint": "^9.13.0",
