--- a/brend_doo/package.json
+++ b/brend_doo/package.json
@@ -20,8 +20,9 @@
     "react-query": "^3.39.3",
     "react-router-dom": "^7.0.2",
     "react-router-hash-link": "^2.4.3",
+    "recoil": "^0.7.7",
     "swiper": "^11.1.14",
-    "yup": "^1.4.0"
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
