--- a/brend_doo/package.json
+++ b/brend_doo/package.json
@@ -10,10 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@radix-ui/react-dialog": "^1.1.4",
     "@tanstack/react-query": "^5.62.8",
     "@tanstack/react-query-devtools": "^5.62.8",
     "axios": "^1.7.9",
+    "clsx": "^2.1.1",
     "formik": "^2.4.6",
+    "input-otp": "^1.4.2",
+    "lucide-react": "^0.469.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.4.1",
@@ -22,6 +26,7 @@
     "react-router-hash-link": "^2.4.3",
     "recoil": "^0.7.7",
     "swiper": "^11.1.14",
+    "tailwind-merge": "^2.6.0",
     "yup": "^1.6.1"
   },
   "devDependencies": {
