--- a/brend_doo/package.json
+++ b/brend_doo/package.json
@@ -10,7 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fancyapps/ui": "^5.0.36",
     "@radix-ui/react-dialog": "^1.1.4",
+    "@react-oauth/google": "^0.12.1",
     "@tanstack/react-query": "^5.62.8",
     "@tanstack/react-query-devtools": "^5.62.8",
     "axios": "^1.7.9",
@@ -22,11 +24,12 @@
     "react-dom": "^18.3.1",
     "react-helmet-async": "^2.0.5",
     "react-hot-toast": "^2.4.1",
+    "react-image-magnifiers": "^1.4.0",
     "react-query": "^3.39.3",
     "react-router-dom": "^7.0.2",
     "react-router-hash-link": "^2.4.3",
     "recoil": "^0.7.7",
-    "swiper": "^11.1.14",
+    "swiper": "^11.2.1",
     "tailwind-merge": "^2.6.0",
     "yup": "^1.6.1"
   },
@@ -35,6 +38,7 @@
     "@types/node": "^22.10.2",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
+    "@types/react-image-magnifiers": "^1.3.5",
     "@types/react-router-hash-link": "^2.4.9",
     "@vitejs/plugin-react-swc": "^3.5.0",
     "autoprefixer": "^10.4.20",
